Refactoring: moving out commands and commandMethods from ViewModel to directory Resources/Commands

--- a/TaskManager.DesktopClient/TaskManager.DesktopClient.csproj
+++ b/TaskManager.DesktopClient/TaskManager.DesktopClient.csproj
@@ -27,6 +27,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Models\" />
+    <Folder Include="Resources\Commands\MainWindowCommands\" />
   </ItemGroup>
   <ItemGroup>
     <Compile Update="Resources\Settings\AppSettings.Designer.cs">
